Делает разметку первой страницы

--- a/catalog.html
+++ b/catalog.html
@@ -2,13 +2,12 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона - разработчик Арефьева Оксана - первая страница</title>
+    <title>HTML Academy: Седона - разработчик Арефьева Оксана - Каталог</title>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </head>
   <body>
     /!Шапка!/
-
 
   </body>
 </html>
