Закончена разметка шапки

--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
     <meta charset="utf-8">
     <title>HTML Academy: Седона - разработчик Арефьева Оксана - первая страница</title>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
-
   </head>
   <body>
-    /!Шапка!/
+    <!-- !Шапка! -->
+    <header>
+      <nav>
+        <ul>
+          <li>
+
+          </li>
+          <li>
+
+          </li>
+
+        </ul>
+      </nav>
+
+    </header>
 
 
   </body>
