--- a/index.html
+++ b/index.html
@@ -1,27 +1,297 @@
 <!DOCTYPE html>
 <html lang="ru">
+
   <head>
+
     <meta charset="utf-8">
-    <title>HTML Academy: Седона - разработчик Арефьева Оксана - первая страница</title>
+    <title>HTML Academy: Седона - разработчик Арефьева Оксана - страница главной страницы</title>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+
   </head>
+
   <body>
-    <!-- !Шапка! -->
-    <header>
-      <nav>
-        <ul>
-          <li>
 
+    <header class="page-header">
+      <!-- Шапка -->
+
+      <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны</h1>
+        <!-- Заголовок главной страницы (невидимый) -->
+
+      <nav class="navigation">
+        <!-- Меню навигации -->
+
+        <ul class="navigation-list">
+          <!-- Список первой части меню -->
+
+          <li class="navigation-item">
+            <img class="navigation-link navigation-link-logo" href="index.html" src="#" alt="Рисунок логотипа Седоны">
+            <!-- Основной логотип города Седоны-->
           </li>
-          <li>
 
+          <li class="navigation-item">
+            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="about.html">О Седоне</a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
 
         </ul>
+
+        <ul class="navigation-list">
+          <!-- Список второй части меню -->
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+            <!-- Открытие модального окна через Поиск -->
+              <img class="navigation-link navigation-link-icon" src="#" alt="Иконка - поиск">
+            </a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">
+              <img class="navigation-link navigation-link-icon"  src="#" alt="Иконка - корзина">
+            </a>
+          </li>
+
+          <li class="navigation-item">
+            <a class="navigation-item-button" href="catalog.html">
+              <button type="button">
+                <span>Хочу сюда</span>
+              </button>
+            </a>
+          </li>
+
+        </ul>
+
       </nav>
 
     </header>
 
+    <main class="main-index">
+      <!-- Основное содержимое главной страницы -->
+
+      <header class="main-index-header">
+        <!-- Шапка основного содержимого -->
+
+        <h2 class="title visually-hidden" >Словосочетание по-английски - Добро пожаловать в великолепную Седону!</h2>
+          <!-- Подзаголовок главной страницы (невидимый) -->
+
+        <ul class="main-index-list">
+
+          <li class="main-index-header-item">
+            <!-- Фото 1 -->
+            <img class="photo1" src="#" alt="Скалы в окрестностях города Седоны">
+          </li>
+
+          <li class="main-index-header-item">
+            <!-- Рисунок с острыми углами -->
+            <img class="main-index-header-cornes" src="#" alt="Острые углы">
+          </li>
+
+
+          <!-- Большой логотип -->
+
+          <li class="main-index-header-item">
+            <!-- Рисунок со словом "Приглашаем" -->
+            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - Приглашаем">
+          </li>
+
+          <li class="main-index-header-item">
+            <!-- Рисунок со словом "в великолепную" -->
+            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - в великолепную">
+          </li>
+
+          <li class="main-index-header-item">
+            <!-- Рисунок со словом "Седону" -->
+            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - Седону">
+          </li>
+
+        </ul>
+
+      </header>
+
+      <section class="advantages">
+        <!-- Основной смысл главной страницы и причины, заслуживающие внимания -->
+
+        <h2 class="title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <!-- Подзаголовок основного смысла -->
+
+        <p class="text">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+
+          <ul class="advantages-list">
+            <!-- Список причин -->
+
+            <h3 class="advantages-list-title visually-hidden">Причины</h3>
+              <!-- Подзаголовок причин (невидимый) -->
+
+            <li class="advantages-item">
+              <img class="advantages-square" src="#" alt="Фон голубого цвета">
+              <!-- Фон - прямоугольник голубого цвета -->
+              <h4 class="advantages-subtitle">Настоящий городок</h4>
+              <!-- Подзаголовок первой причины -->
+              <img class="advantages-line" src="#" alt="Графика - линия">
+              <p>Седона — не аттракцион для<br> туристов, там течёт своя<br> жизнь</p>
+              <img class="photo2" src="#" alt="Домики в окрестностях города Седоны">
+            </li>
+
+            <li class="advantages-item">
+              <h4 class="advantages-subtitle">Небольшая<br> площадь</h4>
+              <!-- Подзаголовок второй причины -->
+              <img class="advantages-line" src="#" alt="Графика - линия">
+              <p>Все достопримечательности<br> находятся очень близко</p>
+            </li>
+
+            <li class="advantages-item">
+              <h4 class="advantages-subtitle">Красивая<br> дорога</h4>
+              <!-- Подзаголовок третьей причины -->
+              <img class="advantages-line" src="#" alt="Графика - линия">
+              <p>Ехать в Седону из Лас-Вегаса<br> совсем не скучно!</p>
+            </li>
+
+            <li class="advantages-item">
+              <h4 class="advantages-subtitle">Мало<br> туристов</h4>
+              <!-- Подзаголовок четвертой причины -->
+              <img class="advantages-line" src="#" alt="Графика - линия">
+              <p>Большинство едет в Гранд<br> Каньон и толпится там</p>
+            </li>
+
+            <li class="advantages-item">
+              <img class="photo3" src="#" alt="Скалы у моста дьявола">
+              <!-- Фон - прямоугольник голубого цвета -->
+              <h4 class="advantages-subtitle">Там есть<br> мост дьявола</h4>
+              <!-- Подзаголовок пятой причины -->
+              <img class="advantages-line" src="#" alt="Графика - линия">
+              <p>Да, по нему можно пройти!<br> Если вы осмелитесь,<br> разумеется</p>
+              <img class="advantages-square" src="#" alt="Фон голубого цвета">
+            </li>
+
+          </ul>
+
+      </section>
+
+      <section class="services">
+        <!-- Секция "Услуги" -->
+
+        <h2 class="title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
+        <!-- Основной смысл преимуществ города Седоны -->
+
+        <p class="text">Опытный персонал и качественное обслуживание!</p>
+
+        <ul class="services-list">
+
+          <h3 class="services-sutitle visually-hidden">Преимущества города Седоны</h3>
+          <!-- Подзаголовок преимуществ города Седоны (невидимый) -->
+
+            <li class="services-item">
+              <img class="services-icon" src="#" alt="Графика - дом">
+              <h4 class="services-title">Жильё</h4>
+              <!-- Подзаголовок первого преимущества -->
+              <p class="services-description">Рекомендуем пожить<br> в настоящем мотеле,<br> всё как в кино!</p>
+            </li>
+
+            <li class="services-item">
+              <img class="services-icon" src="#" alt="Графика - бутерброд">
+              <h4 class="services-title">Еда</h4>
+              <!-- Подзаголовок второго преимущества -->
+              <p class="services-description">Всегда заказывайте<br> топовый фирменный бургер,<br> вы не разочаруетесь!</p>
+            </li>
+
+            <li class="services-item">
+              <img class="services-icon" src="#" alt="Графика - подарок">
+              <h4 class="services-title">Сувениры</h4>
+              <!-- Подзаголовок третьего преимущества -->
+              <p class="services-description">Не только китайского,<br> но и настоящего местного<br> производства!</p>
+            </li>
+
+        </ul>
+
+        <div class="interest">
+
+          <h2 class="title">Заинтересовались?</h2>
+
+          <p class="text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+
+          <a class="interest-button" href="catalog.html">
+            <button type="button">
+              <span>Поиск гостиницы в Седоне</span>
+            </button>
+          </a>
+
+        </div>
+
+      </section>
+
+      <section class="mailing">
+
+        <h2 class="title">Подпишитесь на рассылку</h2>
+
+        <img class="photo4" src="№" alt="Вид на скалы в окрестностях Седоны с голубым фоном">
+
+        <p class="text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+
+        <form id="form" action="https://echo.htmlacademy.ru/" method="post">
+          <input name="email" type="email" placeholder="Ваш e-mail" href="mailto:email@example.com" required/>
+          <button type="submit">
+            <span>Подписаться</span>
+          </button>
+        </form>
+
+      </section>
+
+    </main>
+
+    <footer class="page-footer">
+      <!-- Подвал главной страницы -->
+
+      <nav class="page-footer-contacts">
+        <!-- Меню навигации в подвале -->
+
+        <ul class="footer-social-list">
+        <!-- Список меню в подвале -->
+
+        <li class="footer-social-item">
+          <a href="https://vk.com/htmlacademy" type="button">
+            <span>Vkontakte</span>
+          </a>
+        </li>
+
+        <li class="footer-social-item">
+          <a href="https://t.me/htmlacademy" type="button">
+            <span>Telegram</span>
+          </a>
+        </li>
+
+        <li class="footer-social-item">
+          <a href="https://www.youtube.com/user/htmlacademyru" type="button">
+            <span>Youtube</span>
+          </a>
+        </li>
+
+          <li class="footer-social-item">
+            <a href="tel:+7(812)812-12-12">
+              <span>+7(812)812-12-12</span>
+            </a>
+          </li>
+
+          <li class="footer-social-item">
+            <a href="https://htmlacademy.ru/">
+              <img src="#">
+              <span>Логотип .html academy</span>
+            </a>
+
+          </li>
+
+        </ul>
+
+      </nav>
+
+    </footer>
 
   </body>
+
 </html>
