--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header class="page-header">
       <!-- Шапка -->
 
-      <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны</h1>
+      <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны1</h1>
         <!-- Заголовок главной страницы (невидимый) -->
 
       <nav class="navigation">
