Исправляет страницу каталога.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
 
     <meta charset="utf-8">
-    <title>HTML Academy: Седона - разработчик Арефьева Оксана - страница главной страницы</title>
+    <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> главная страница</title>
     <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
 
   </head>
@@ -14,7 +14,7 @@
     <header class="page-header">
       <!-- Шапка -->
 
-      <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны1</h1>
+      <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны2</h1>
         <!-- Заголовок главной страницы (невидимый) -->
 
       <nav class="navigation">
