--- a/index.html
+++ b/index.html
@@ -2,28 +2,23 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> главная страница</title>
-    <p>
-      Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».
-    </p>
-    <base href="https://www.figma.com/file/tfOIExse2mRkDxCNjaAxnm/HTML-1-%2F-Седона-(38)?node-id=0%3A1&mode=dev">
   </head>
   <body>
     <header class="page-header">
-      <!-- Шапка -->
+    <!-- Шапка главной страницы -->
       <h1 class="page-header-title visually-hidden">Официальный сайт города Седоны</h1>
-        <!-- Заголовок главной страницы (невидимый) -->
+      <!-- Заголовок главной страницы (невидимый) -->
       <nav class="navigation">
-        <!-- Меню навигации -->
+      <!-- Меню навигации -->
         <ul class="navigation-list">
-          <!-- Список первой части меню -->
+        <!-- Список первой части меню -->
           <li class="navigation-item">
             <img class="navigation-link navigation-link-logo" href="index.html" src="#" alt="Рисунок логотипа Седоны">
             <!-- Основной логотип города Седоны-->
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-link-current" href="index.html">Главная</a>
+            <a class="navigation-link navigation-list-current" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="about.html">О Седоне</a>
@@ -32,23 +27,23 @@
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
           </li>
         </ul>
-        <ul class="navigation-list">
-          <!-- Список второй части меню -->
-          <li class="navigation-item">
-            <a class="navigation-link-quote" href="#">
+        <ul class="navigation-list2">
+        <!-- Список второй части меню -->
+          <li class="navigation-list2-item">
+            <a class="navigation-list2-link-quote" href="#">
             <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-link-img navigation-link-icon" src="#" alt="Иконка - поиск">
+              <img class="navigation-list2-link-img navigation-list2-link-icon" src="#" alt="Иконка - поиск">
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-link-quote" href="#">
-              <img class="navigation-link-img navigation-link-icon"  src="#" alt="Иконка - корзина">
+          <li class="navigation-list2-item">
+            <a class="navigation-list2-link-quote" href="#">
+              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="#" alt="Иконка - корзина">
             </a>
           </li>
-          <li class="navigation-item">
-            <a class="navigation-item-quote" href="catalog.html">
-              <form>
-                <button class="navigation-item-button" type="button">
+          <li class="navigation-list2-item">
+            <a class="navigation-list2-item-quote" href="catalog.html">
+              <form class="navigation-list2-item-button">
+                <button class="navigation-list2-item-quote-button" type="button">
                   <span>Хочу сюда</span>
                 </button>
               </form>
@@ -57,47 +52,50 @@
         </ul>
       </nav>
     </header>
-
     <main class="main-index">
-      <!-- Основное содержимое главной страницы -->
-      <header class="main-index-header">
-        <!-- Шапка основного содержимого -->
-        <h2 class="main-index-title visually-hidden" >Напутствие по-английски - Добро пожаловать в великолепную Седону! "Ибо заволакивает Великий Каньон!" = Welcome to the gorgeous Sedona. "Because the Grand Canyon sucks!"</h2>
-          <!-- Подзаголовок главной страницы (невидимый) -->
-        <ul class="main-index-list">
-          <li class="main-index-header-item">
+    <!-- Основное содержимое главной страницы -->
+      <section class="main-index-header">
+      <!-- Шапка основного содержимого -->
+        <h2 class="main-index-header-title visually-hidden" >Напутствие по-английски - Добро пожаловать в великолепную Седону! "Ибо заволакивает Великий Каньон!" = Welcome to the gorgeous Sedona. "Because the Grand Canyon sucks!"</h2>
+        <!-- Подзаголовок главной страницы (невидимый) -->
+          <ul class="main-index-header-list">
+            <li class="main-index-header-item">
             <!-- Фото 1 -->
-            <img class="photo1" src="#" alt="Скалы в окрестностях города Седоны">
-          </li>
-          <li class="main-index-header-item">
-            <!-- Рисунок с острыми углами -->
-            <img class="main-index-header-cornes" src="#" alt="Острые углы">
-          </li>
-          <!-- Большой логотип -->
-          <li class="main-index-header-item">
-            <!-- Рисунок со словом "Приглашаем" -->
-            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - Приглашаем">
-          </li>
-          <li class="main-index-header-item">
-            <!-- Рисунок со словом "в великолепную" -->
-            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - в великолепную">
-          </li>
-          <li class="main-index-header-item">
-            <!-- Рисунок со словом "Седону" -->
-            <img class="main-index-header-logo" src="#" alt="Рисунок со словом по-английски - Седону">
-          </li>
-        </ul>
-      </header>
+              <img class="photo1" src="#" alt="Скалы в окрестностях города Седоны">
+            </li>
+            <li class="main-index-header-item">
+            <!-- Острые углы -->
+              <img class="main-index-header-cornes" src="#" alt="Острые углы">
+            </li>
+            <!-- Большой логотип -->
+            <li class="main-index-header-item">
+            <!-- Слово по-английски "Приглашаем" -->
+              <img class="main-index-header-logo" src="#" alt="Слово по-английски - Приглашаем">
+            </li>
+            <li class="main-index-header-item">
+            <!-- Слово по-английски "в великолепную" -->
+              <img class="main-index-header-logo2" src="#" alt="Слово по-английски - в великолепную">
+            </li>
+            <li class="main-index-header-item">
+              <!-- Слово по-английски "Седону" -->
+              <img class="main-index-header-logo3" src="#" alt="Слово по-английски - Седону">
+            </li>
+            <li class="main-index-header-item">
+              <!-- Словосочетание по-английски "Ибо..." -->
+              <img class="main-index-header-logo4" src="#" alt="Словосочетание по-английски - Ибо заволакивает Великий Каньон!">
+            </li>
+          </ul>
+      </section>
       <section class="advantages">
-        <!-- Основной смысл главной страницы и причины, заслуживающие внимания -->
-        <h2 class="advantages-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</h2>
-          <!-- Подзаголовок основного смысла -->
+      <!-- Основной смысл главной страницы и причины, заслуживающие внимания -->
+        <h2 class="advantages-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</h2>
+        <!-- Подзаголовок основного смысла -->
         <p class="advantages-description">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         <div class="advantages-reasons">
           <h3 class="advantages-title visually-hidden">Причины</h3>
           <!-- Подзаголовок причин (невидимый) -->
           <ul class="advantages-list">
-            <!-- Список причин -->
+          <!-- Список причин -->
             <li class="advantages-item">
               <img class="advantages-square" src="#" alt="Фон голубого цвета">
               <!-- Фон - прямоугольник голубого цвета -->
@@ -138,12 +136,12 @@
         </div>
       </section>
       <section class="services">
-        <!-- Секция "Услуги" -->
+      <!-- Секция "Услуги" -->
         <h2 class="services-title">Приезжайте в Седону отдохнуть<br> в комфорте и уюте!</h2>
         <!-- Основной смысл преимуществ города Седоны -->
         <p class="text">Опытный персонал и качественное обслуживание!</p>
         <div>
-          <h3 class="services-subtitle visually-hidden">Преимущества города Седоны</h3>↩
+          <h3 class="services-subtitle visually-hidden">Преимущества города Седоны</h3>
           <!-- Подзаголовок преимуществ города Седоны (невидимый) -->
           <ul class="services-list">
             <li class="services-item">
@@ -168,10 +166,10 @@
         </div>
         <div class="interest">
           <h2 class="interest-title">Заинтересовались?</h2>
-          <p class="text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-          <a class="interest-button">
-            <form>
-              <button class="interest-button-quote" type="button" href="catalog.html">
+          <p class="interest-text">Укажите предполагаемые даты поездки,<br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+          <a class="interest-button" href="catalog.html">
+            <form class="interest-quote-form">
+              <button class="interest-quote-form-button" type="button">
                 <span>Поиск гостиницы в Седоне</span>
               </button>
             </form>
@@ -180,51 +178,50 @@
       </section>
       <section class="mailing">
         <h2 class="mailing-title">Подпишитесь на рассылку</h2>
-        <img class="photo4" src="#" alt="Вид на скалы в окрестностях Седоны с голубым фоном">
-        <p class="text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
-        <form class="mailing-form" id="form" action="https://echo.htmlacademy.ru/" method="post">
-          <input name="email" type="email" placeholder="Ваш e-mail" href="mailto:email@example.com" required>
-          <button class="mailing-form-button" type="submit">
-            <span>Подписаться</span>
-          </button>
-        </form>
+          <img class="photo4" src="#" alt="Вид на скалы в окрестностях Седоны с голубым фоном">
+          <p class="mailing-text">Только полезная информация и никакого спама,<br> честное бойскаутское!</p>
+          <form class="mailing-form" id="form" action="https://echo.htmlacademy.ru/" method="post">
+            <input name="email" type="email" placeholder="Ваш e-mail" href="mailto:email@example.com" required>
+            <button class="mailing-form-button" type="submit">
+              <span>Подписаться</span>
+            </button>
+          </form>
       </section>
     </main>
-
     <footer class="page-footer">
       <!-- Подвал главной страницы -->
-      <nav class="page-footer-contacts">
+        <nav class="page-footer-contacts">
         <!-- Меню навигации в подвале -->
-        <ul class="footer-social-list">
-        <!-- Список меню в подвале -->
-        <li class="footer-social-item">
-          <a href="https://vk.com/htmlacademy" type="button">
-            <span>Vkontakte</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://t.me/htmlacademy" type="button">
-            <span>Telegram</span>
-          </a>
-        </li>
-        <li class="footer-social-item">
-          <a href="https://www.youtube.com/user/htmlacademyru" type="button">
-            <span>Youtube</span>
-          </a>
-        </li>
-          <li class="footer-social-item">
-            <a href="tel:+7(812)812-12-12">
-              <span>+7(812)812-12-12</span>
-            </a>
-          </li>
-          <li class="footer-social-item">
-            <a href="https://htmlacademy.ru/">
-              <img src="#">
-              <span>Логотип HTML academy</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </footer>
+          <ul class="footer-social-list">
+          <!-- Список меню в подвале -->
+            <li class="footer-social-item">
+              <a href="https://vk.com/htmlacademy" type="button">
+                <span>Vkontakte</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="https://t.me/htmlacademy" type="button">
+                <span>Telegram</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="https://www.youtube.com/user/htmlacademyru" type="button">
+                <span>Youtube</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="tel:+7(812)812-12-12">
+                <span>+7(812)812-12-12</span>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a href="https://htmlacademy.ru/">
+                <img src="#">
+                <span>Логотип HTML academy</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </footer>
   </body>
 </html>
