--- a/catalog.html
+++ b/catalog.html
@@ -2,7 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> главная страница</title>
+    <title>HTML Academy: Седона -> разработчик Арефьева Оксана -> Каталог</title>
   </head>
   <body>
     <header class="page-header">
