Продолжает изучать раздел "Графика".

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
-            <img class="navigation-link navigation-link-logo" href="index.html" src="#" alt="Рисунок логотипа Седоны">
+            <img class="navigation-link navigation-link-logo" href="index.html" src="images/logo/logo.svg" alt="Рисунок логотипа Седоны">
             <!-- Основной логотип города Седоны-->
           </li>
           <li class="navigation-item">
@@ -32,7 +32,7 @@
           <li class="navigation-list2-item">
             <a class="navigation-list2-link-quote" href="#">
             <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-list2-link-img navigation-list2-link-icon" src="#" alt="Иконка - поиск">
+              <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/" alt="Иконка - поиск">
             </a>
           </li>
           <li class="navigation-list2-item">
