Продолжает верстать сайт о Седоне с графикой.

--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
           <li class="navigation-list2-item">
             <a class="navigation-list2-link-quote" href="#">
             <!-- Открытие модального окна через Поиск -->
-              <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/" alt="Иконка - поиск">
+              <img class="navigation-list2-link-img navigation-list2-link-icon" src="images/icon/search.svg" alt="Иконка - поиск">
             </a>
           </li>
           <li class="navigation-list2-item">
             <a class="navigation-list2-link-quote" href="#">
-              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="#" alt="Иконка - корзина">
+              <img class="navigation-list2-link-img navigation-list2-link-icon"  src="images/icon/basket.svg" alt="Иконка - корзина">
             </a>
           </li>
           <li class="navigation-list2-item">
@@ -61,28 +61,24 @@
           <ul class="main-index-header-list">
             <li class="main-index-header-item">
             <!-- Фото 1 -->
-              <img class="photo1" src="#" alt="Скалы в окрестностях города Седоны">
+              <img class="photo1" src="images/foto1.jpg" alt="Скалы в окрестностях города Седоны">
             </li>
             <li class="main-index-header-item">
             <!-- Острые углы -->
-              <img class="main-index-header-cornes" src="#" alt="Острые углы">
+              <img class="main-index-header-cornes" src="images/sharp-corners.svg" alt="Острые углы">
             </li>
             <!-- Большой логотип -->
             <li class="main-index-header-item">
             <!-- Слово по-английски "Приглашаем" -->
-              <img class="main-index-header-logo" src="#" alt="Слово по-английски - Приглашаем">
+              <img class="main-index-header-logo" src="images/logo/welcome.png" alt="Слово по-английски - Приглашаем">
             </li>
             <li class="main-index-header-item">
             <!-- Слово по-английски "в великолепную" -->
-              <img class="main-index-header-logo2" src="#" alt="Слово по-английски - в великолепную">
+              <img class="main-index-header-logo2" src="images/logo/gorgeous.svg" alt="Слово по-английски - в великолепную">
             </li>
             <li class="main-index-header-item">
               <!-- Слово по-английски "Седону" -->
-              <img class="main-index-header-logo3" src="#" alt="Слово по-английски - Седону">
-            </li>
-            <li class="main-index-header-item">
-              <!-- Словосочетание по-английски "Ибо..." -->
-              <img class="main-index-header-logo4" src="#" alt="Словосочетание по-английски - Ибо заволакивает Великий Каньон!">
+              <img class="main-index-header-logo3" src="images/logo/Sedona.png" alt="Слово по-английски - Седону, а также словосочетание по-английски - Ибо заволакивает Великий Каньон!">
             </li>
           </ul>
       </section>
@@ -97,7 +93,7 @@
           <ul class="advantages-list">
           <!-- Список причин -->
             <li class="advantages-item">
-              <img class="advantages-square" src="#" alt="Фон голубого цвета">
+              <img class="advantages-square" src="images/advantages-square.svg" alt="Фон голубого цвета">
               <!-- Фон - прямоугольник голубого цвета -->
               <h4 class="advantages-subtitle">Настоящий городок</h4>
               <!-- Подзаголовок первой причины -->
