Отправляет домашнее задание по графике.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <!-- Заголовок главной страницы (невидимый) -->
       <nav class="navigation">
       <!-- Меню навигации -->
+        <a class="navigation-logo" href="index.html">
+          <img class="page-header-logo" alt="Бренд логотипа Седоны" src="images/logo/brand-sedona.png" >
+          <!-- Основной логотип города Седоны-->
+        </a>
         <ul class="navigation-list">
         <!-- Список первой части меню -->
           <li class="navigation-item">
-            <img class="navigation-link navigation-link-logo" href="index.html" src="images/logo/brand-sedona.png" alt="Рисунок логотипа Седоны">
-            <!-- Основной логотип города Седоны-->
+            <a class="navigation-link" href="index.html">Главная</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-list-current" href="index.html">Главная</a>
-          </li>
-          <li class="navigation-item">
-            <a class="navigation-link" href="about.html">О Седоне</a>
+            <a class="navigation-link navigation-link-current" href="about.html">О Седоне</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="catalog.html">Гостиницы</a>
@@ -212,17 +212,17 @@
         <!-- Список меню в подвале -->
           <li class="footer-social-item">
             <a class="footer-social-item-vk" href="https://t.me/htmlacademy" type="button">
-              <span><img src="images/icons/vk.png" alt="Vkontakte"></span>
+              <span><img src="images/icons/vk.png" alt="Vkontakte"  class="visually-hidden">ВКонтакте</span>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-item-telegram" href="https://t.me/htmlacademy" type="button">
-              <span><img src="images/icons/telegram.png" alt="Telegram"></span>
+              <span><img src="images/icons/telegram.png" alt="Telegram"  class="visually-hidden">Телеграмм</span>
             </a>
           </li>
           <li class="footer-social-item">
             <a class="footer-social-item-youtube" href="https://www.youtube.com/user/htmlacademyru" type="button">
-              <span><img src="images/icons/youtube.png" alt="Youtube"></span>
+              <span><img src="images/icons/youtube.png" alt="Youtube"  class="visually-hidden">Ютуб</span>
             </a>
           </li>
         </ul>
@@ -236,7 +236,7 @@
         <ul>
           <li class="footer-social-item">
             <a href="https://htmlacademy.ru/">
-              <span><img src="images/logo/brand-htmlacademy.png" alt="Логотип HTML academy"></span>
+              <span><img src="images/logo/brand-htmlacademy.png" alt="Логотип HTML academy" class="visually-hidden">HTML Академия</span>
             </a>
           </li>
         </ul>
